--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,111 +1,10 @@
 ---
-import {Image} from 'astro:assets';
-import Hero from "../assets/hero.jpg";
-import Layout from '../layouts/Layout.astro';
-import {ArrowRight} from "lucide-react";
-import {Link} from "@/components/link";
-import Poltek from "../assets/poltek.png";
-import ATS from "../assets/ats.jpg";
-import Collaborative from "../assets/illustration/collaborative.jpeg";
-import Practical from "../assets/illustration/practical.jpeg";
-import Industry from "../assets/illustration/industry.jpeg";
-import CardSquareImage from "../components/CardSquareImage.astro";
-
-
-import 'swiper/css';
-import 'swiper/css/autoplay';
-import ReminderSlider from '../components/ui/ReminderSlider.tsx';
-const response = await fetch('https://api.sheetbest.com/sheets/2d51a943-3a12-49ce-b75c-91b86b626177');
-const reminders = await response.json();
+import Layout from "../layouts/Layout.astro";
+import AboutSection from "./_AboutSection.astro";
+import HeroSection from "./_HeroSection.astro";
 ---
 
 <Layout>
-    <div class="flex flex-col min-h-[calc(100vh-8rem)]">
-        {/* Hero section */}
-        <section class="w-full py-6">
-            <div class="container px-4 md:px-6 space-y-6">
-                <div class="flex flex-col items-center px-4 py-12 md:p-16 space-y-4 text-center">
-                    <div class="space-y-6">
-                        <div class="flex gap-4 items-center justify-center">
-                            <Image src={Poltek} alt="Batam State Polytechnic Logo" class="h-20 w-auto"/>
-                            <img src="/favicon.png" alt="TRPL" class="h-20"/>
-                        </div>
-
-                        <h1 class="text-3xl text-primary font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl">
-                            Welcome to TERPAL B 24
-                        </h1>
-                        <p class="mx-auto max-w-[700px] md:text-xl text-muted-foreground">
-                            Software Engineering Class Part of{' '}
-                            <a
-                              href="https://if.polibatam.ac.id/teknologi-rekayasa-perangkat-lunak/"
-                              class="hover:opacity-75 transition-opacity duration-200"
-                              target="_blank"
-                              rel="noopener noreferrer"
-                            >
-                              <strong>Prodi TRPL Polibatam</strong>
-                            </a>
-                          </p>
-                          
-                    </div>
-                    <div class="flex items-center justify-center gap-4 flex-wrap">
-                        <Link href="/members">
-                            Our Members
-                            <ArrowRight className="h-4 w-4"/>
-                        </Link>
-                        <Link variant="outline" href="/projects">
-                            Our Projects
-                            <ArrowRight className="h-4 w-4"/>
-                        </Link>
-                    </div>
-                </div>
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                    <figure class="aspect-video w-full rounded-3xl overflow-hidden">
-                        <Image src={Hero} alt="Our class"
-                               class="object-cover object-center w-full h-full hover:scale-125 transition-transform hover:-rotate-2"/>
-                    </figure>
-                    <figure class="aspect-video w-full rounded-3xl overflow-hidden">
-                        <Image src={ATS} alt="Our class"
-                               class="object-cover object-center w-full h-full hover:scale-125 transition-transform hover:rotate-2"/>
-                    </figure>
-                </div>
-            </div>
-        </section>
-
-        {/* Announcement section */}
-        <ReminderSlider reminders={reminders} client:load/>
-
-        
-        {/* Features section */}
-        <section class="w-full py-12 md:py-24 lg:py-10">
-            <div class="container px-4 md:px-6">
-                <div class="flex flex-col items-center justify-center space-y-4 text-center">
-                    <div class="space-y-2">
-                        <h2 class="text-3xl font-bold tracking-tighter md:text-4xl text-primary">About Our Class</h2>
-                        <p class="mx-auto max-w-[700px] text-muted-foreground">
-                            TERPAL B 24 is a Software Engineering class focused on developing practical skills and
-                            knowledge in
-                            modern software development.
-                        </p>
-                    </div>
-                </div>
-                <div class="grid grid-cols-1 gap-6 md:grid-cols-3 lg:gap-12 mt-8">
-                    <CardSquareImage
-                            src={Collaborative}
-                            title="Collaborative Learning"
-                            subtitle="We work together on projects to develop teamwork and communication skills."
-                    />
-                    <CardSquareImage
-                            src={Practical}
-                            title="Practical Projects"
-                            subtitle="Hands-on experience with real-world software engineering challenges."
-                    />
-                    <CardSquareImage
-                            src={Industry}
-                            title="Industry Preparation"
-                            subtitle="Curriculum designed to prepare students for careers in software development."
-                    />
-                </div>
-            </div>
-        </section>
-    </div>
+  <HeroSection />
+  <AboutSection />
 </Layout>
