--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,7 +1,18 @@
-<footer class="border-t py-6 md:py-8">
-    <div class="container flex flex-col items-center justify-center gap-4 md:flex-row md:gap-8">
-        <p class="text-center text-sm text-muted-foreground">
-            &copy; {new Date().getFullYear()} TERPAL B 24 - Software Engineering Class at Politeknik Negeri Batam
-        </p>
-    </div>
+<footer class="py-24">
+  <div class="container flex flex-col items-center justify-center gap-4">
+    <p class="text-center font-semibold">
+      &copy; {new Date().getFullYear()} Terpal B 24. All rights reserved.
+    </p>
+    <p class="text-center text-sm">
+      Made with ❤️ by{" "}
+      <a
+        href="https://github.com/terpalb24/terpalb24.github.io"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-primary"
+      >
+        The Contributor
+      </a>
+    </p>
+  </div>
 </footer>
