--- a/src/pages/albums/[slug]/index.astro
+++ b/src/pages/albums/[slug]/index.astro
@@ -1,48 +1,60 @@
 ---
-import {getCollection, render} from "astro:content";
+import { getCollection, render } from "astro:content";
 import Layout from "../../../layouts/Layout.astro";
-import {CalendarHeartIcon, MapPin} from "lucide-react";
-import {renderDate} from "../../../lib/date";
-import {Badge} from "@/components/ui/badge";
-import {Image} from "astro:assets";
+import { renderDate } from "../../../lib/date";
+import { Image } from "astro:assets";
+import HeaderSection from "../../../components/HeaderSection.astro";
+import { CalendarHeartIcon, MapPinIcon } from "@lucide/astro";
+import { calcSpeed } from "../../../lib/utils";
 
 export async function getStaticPaths() {
-    const albums = await getCollection('album');
-    return albums.map(album => ({
-        params: {slug: album.id},
-        props: {album},
-    }));
+  const albums = await getCollection("album");
+  return albums.map((album) => ({
+    params: { slug: album.id },
+    props: { album },
+  }));
 }
 
-const {album} = Astro.props;
+const { album } = Astro.props;
 if (!album) {
-    // Handle Error, for example:
-    throw new Error('Could not find album!');
+  // Handle Error, for example:
+  throw new Error("Could not find album!");
 }
-const {data} = album;
-const {Content} = await render(album);
+const { data } = album;
+const { Content } = await render(album);
 ---
-<Layout title={data.title}>
-    <div class="container py-12">
-        <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
 
-            <h1 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-primary">{data.title}</h1>
-            <div class="mx-auto max-w-[700px] text-muted-foreground">
-                <Content/>
-            </div>
-            <div class="flex items-center gap-2 flex-wrap justify-center">
-                <Badge variant="secondary">
-                    <MapPin/>
-                    {data.location}</Badge>
-                <Badge variant="secondary">
-                    <CalendarHeartIcon/>
-                    {renderDate(data.date)}</Badge>
-            </div>
-        </div>
-        <div class="flex items-center justify-center gap-4 flex-wrap">
-            {data.contents.map((item) => (
-                    <Image src={item} alt="" class="max-h-[500px] w-auto rounded-2xl"/>
-            ))}
-        </div>
+<Layout title={data.title}>
+  <HeaderSection title={data.title}>
+    <div class="mx-auto mt-4 text-lg max-w-xl">
+      <Content />
+      <div
+        class="flex items-center justify-center font-bold uppercase text-sm mt-4 gap-6 flex-wrap text-secondary"
+      >
+        <span class="flex gap-1 items-center">
+          <MapPinIcon />
+          <span>{data.location}</span>
+        </span>
+        <span class="flex gap-1 items-center">
+          <CalendarHeartIcon />
+          <span>{renderDate(data.date)}</span>
+        </span>
+      </div>
     </div>
+  </HeaderSection>
+  <div class="container py-12">
+    <div class="flex items-center justify-center gap-12 flex-wrap">
+      {
+        data.contents.map((item, idx) => (
+          <figure data-speed={calcSpeed(idx)}>
+            <Image
+              src={item}
+              alt=""
+              class="max-h-[500px] w-auto rounded-4xl hover:scale-95 transition-all duration-300"
+            />
+          </figure>
+        ))
+      }
+    </div>
+  </div>
 </Layout>
