--- a/src/pages/lecturers/index.astro
+++ b/src/pages/lecturers/index.astro
@@ -1,69 +1,97 @@
 ---
-import {Card, CardContent, CardHeader, CardTitle} from "@/components/ui/card";
 import Layout from "../../layouts/Layout.astro";
-import {getCollection} from "astro:content";
-import {Image} from "astro:assets";
-import {Badge} from "@/components/ui/badge";
+import { getCollection } from "astro:content";
+import { Image } from "astro:assets";
+import HeaderSection from "../../components/HeaderSection.astro";
+import ImageHoverable from "../../components/ImageHoverable.astro";
+import { calcSpeed } from "../../lib/utils";
 
 const lecturers = await getCollection("lecturer");
-lecturers.sort((a, b) => (a.data.isGuardianLecturer === b.data.isGuardianLecturer) ? 0 : a.data.isGuardianLecturer ? -1 : 1)
+lecturers.sort((a, b) =>
+    a.data.isGuardianLecturer === b.data.isGuardianLecturer
+        ? 0
+        : a.data.isGuardianLecturer
+          ? -1
+          : 1,
+);
 
-const subjects = await getCollection('subject');
+const subjects = await getCollection("subject");
 ---
-<Layout title="Our Lecturers">
-    <div class="container py-12">
-        <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
-            <h1 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-primary">Our Lecturers</h1>
-            <p class="mx-auto max-w-[700px] text-muted-foreground">
-                Meet the dedicated faculty members who guide TERPAL B 24
-            </p>
-        </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            {lecturers.map(({id, data}) => {
-                const currentSubjects = subjects.filter(item => item.data.theory.id === id || item.data.practice?.id === id);
-                return (
-                        <Card className="overflow-hidden shadow-none">
-                            <div class="flex justify-center pt-6">
-                                <div class="relative h-48 w-48 rounded-2xl overflow-hidden">
-                                    <Image
-                                            src={data.photo}
-                                            alt={data.name}
-                                            class="object-cover w-full h-full"
-                                    />
+<Layout title="Our Lecturers">
+    <HeaderSection
+        title="Our Lecturers"
+        subtitle="Meet the dedicated faculty members who guide TERPAL B 24"
+    />
+    <div class="container py-12">
+        <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-12"
+        >
+            {
+                lecturers.map(({ id, data }, idx) => {
+                    const currentSubjects = subjects.filter(
+                        (item) =>
+                            item.data.theory.id === id ||
+                            item.data.practice?.id === id,
+                    );
+                    return (
+                        <div data-speed={calcSpeed(idx, 3)}>
+                            <ImageHoverable
+                                src={data.photo}
+                                alt={data.name}
+                                class="aspect-square"
+                            />
+                            <div class="mt-6">
+                                <div class="text-sm font-bold">
+                                    NIK: {data.nik}
                                 </div>
-                            </div>
-                            <CardHeader className="text-center">
-                                <CardTitle className="text-primary text-lg">{data.name}</CardTitle>
-                                <div class="text-center">
-                                    <Badge variant="secondary">NIK: {data.nik}</Badge>
-                                </div>
-                            </CardHeader>
-                            <CardContent className="space-y-4">
-                                <div>
-                                    <p class="text-sm font-medium">Specialization:</p>
-                                    <p class="text-sm text-muted-foreground mt-1">{data.specialization}</p>
-                                </div>
-                                {currentSubjects && currentSubjects.length > 0 ?
-                                        <div class="space-y-1">
-                                            <p class="text-sm font-medium">Subjects:</p>
-                                            {currentSubjects.map(({data: subject}) => {
-                                                const isTheory = subject.theory.id === id;
-                                                const isPractice = subject.practice?.id === id;
+                                <h3
+                                    title={data.name}
+                                    class="text-primary truncate text-2xl leading-normal font-black"
+                                >
+                                    {data.name}
+                                </h3>
+                                <p class="text-sm text-muted-foreground mt-1">
+                                    {data.specialization}
+                                </p>
+                                {currentSubjects &&
+                                currentSubjects.length > 0 ? (
+                                    <div class="flex flex-wrap gap-4 mt-2">
+                                        {currentSubjects.map(
+                                            ({ data: subject }) => {
+                                                const isTheory =
+                                                    subject.theory.id === id;
+                                                const isPractice =
+                                                    subject.practice?.id === id;
 
                                                 return (
-                                                        <div class="text-sm text-muted-foreground flex gap-4"><span
-                                                                class="font-bold font-mono">{subject.code}</span><span>{subject.title}
-                                                            ({(isTheory && isPractice) ? "Teori & Praktikum" : isTheory ? "Teori" : "Praktikum"})</span>
-                                                        </div>
-                                                )
-                                            })}
-                                        </div> :
-                                        <Fragment/>}
-                            </CardContent>
-                        </Card>
-                );
-            })}
+                                                    <div class="flex gap-4">
+                                                        <span
+                                                            class="font-bold text-secondary"
+                                                            title={`${subject.title} (${
+                                                                isTheory &&
+                                                                isPractice
+                                                                    ? "Teori & Praktikum"
+                                                                    : isTheory
+                                                                      ? "Teori"
+                                                                      : "Praktikum"
+                                                            })`}
+                                                        >
+                                                            {subject.code}
+                                                        </span>
+                                                    </div>
+                                                );
+                                            },
+                                        )}
+                                    </div>
+                                ) : (
+                                    <Fragment />
+                                )}
+                            </div>
+                        </div>
+                    );
+                })
+            }
         </div>
     </div>
 </Layout>
