--- a/src/pages/notion/index.astro
+++ b/src/pages/notion/index.astro
@@ -2,13 +2,12 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout>
-  <div class="flex justify-center mt-8">
-    <iframe 
-      src="https://v2-embednotion.com/1330fb51530080cba332f57c3b3f1582?theme=light" 
-      style="width: 90%; height: 500px; border-radius: 40px;" 
-      frameborder="0" 
-      allowfullscreen
-    ></iframe>
-  </div>
+<Layout title="Notion">
+    <div class="container pb-24 pt-36">
+        <iframe
+            src="https://v2-embednotion.com/1330fb51530080cba332f57c3b3f1582?theme=light"
+            frameborder="0"
+            class="w-full h-screen rounded-xl"
+            allowfullscreen></iframe>
+    </div>
 </Layout>
